--- a/src/styles/components/_sectionFive.scss
+++ b/src/styles/components/_sectionFive.scss
@@ -4,6 +4,7 @@
   align-items: center;
   background: $white;
   padding-top: 5.5rem;
+  padding-bottom: 8.6875rem;
 }
 
 
@@ -40,8 +41,14 @@
   color: $bg-primary;
 }
 
-.subscription-heading {
+.subscription-heading h2 {
+  padding-bottom: 0.375rem;
   text-transform: uppercase;
+}
+
+.subscription-heading p {
+  font-size: 0.9375rem;
+  padding-bottom: 3rem;
 }
 
 .subscription-heading span {
@@ -76,7 +83,14 @@
 
 .sub-options {
   width: 80%;
-//  padding-bottom: 9.25rem;
+}
+
+.subscription:first-child .sub-options {
+  padding-bottom: 9.25rem;
+}
+
+.subscription:last-child .sub-options {
+  padding-bottom: 5rem;
 }
 
 .subscribe-cta:first-child {
